[tool.poetry]
name = "vkreborn"
version = "0.1.0"
description = ""
authors = ["mrtnvgr <martynovegorOF@yandex.ru>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = {git = "https://github.com/vkbottle/vkbottle.git", rev = "dev"}
loguru = "^0.6.0"
SQLAlchemy = "^1.4.46"
async-google-trans-new = "^1.4.6"
shazamio = "^0.3.1.1"
asyncpg = "^0.27.0"
setuptools = "^66.1.1"
pillow = "^9.4.0"

[tool.poetry.group.test.dependencies]
flakeheaven = {git = "https://github.com/flakeheaven/flakeheaven.git"}
flake8-isort = "^6.0.0"
pylint = "^2.15.10"
flake8-black = "^0.3.6"
black = "^22.12.0"

[tool.isort]
profile = "black"

[tool.flakeheaven]
format = "grouped"
max_line_length = 98
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F403", "-F405"]
"flake8-*" = ["+*"]
flake8-isort = ["-*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
