[tool.poetry]
name = "vkreborn"
version = "0.1.0"
description = ""
authors = ["mrtnvgr <martynovegorOF@yandex.ru>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vkbottle = {git = "https://github.com/vkbottle/vkbottle", rev = "dev"}
loguru = "^0.6.0"
SQLAlchemy = "^2.0.6"
async-google-trans-new = "^1.4.6"
shazamio = {git = "https://github.com/mrtnvgr/shazamio", rev = "bump-aiofiles"}
asyncpg = "^0.27.0"
setuptools = "^67.6.1"
pillow = "^9.4.0"
orjson = "^3.8.9"
alembic = "^1.10.2"

[tool.poetry.group.test.dependencies]
flakeheaven = {git = "https://github.com/flakeheaven/flakeheaven.git"}
pylint = "^2.17.1"
black = "^23.3.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 98

[tool.flakeheaven]
format = "grouped"
max_line_length = 98
show_source = true
exclude = ["migrations", ".git", "__pycache__"]

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F403", "-F405"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
